[tool.poetry]
name = "duckql-django"
version = "0.3.3"
description = "backboneQL Django integration"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2 || ^3"
duckql = "^0.6.1"
django-enum-choices = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.4.1"
pytest-django = "^3.9.0"
pytest-flake8 = "^1.0.4"
mkdocs = "^1.1"
mkdocs-material = "^5.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
